Version 0.14 (19.02.2018)

- Moved keybindings to keybindings.py.
- Added C-c C-o keyboard shortcut to open account URL.
- Changed toolbar text for keyboard shortcuts.

Version 0.13 (19.02.2018)

- Added keyboard shortcuts to copy fields to clipboard for the last viewed account.
- Added clipboard info to toolbar. Shows what was last copied
  to clipboard by this program.
- Added -c,--casesensitive option to uname-command.
- Added --passphrase command line option.
- Prints program name and version when starting.

Version 0.12 (15.02.2018)

- Removed commands no longer relevant.
- Uses python-prompt-toolkit. Includes now command history, 
  command completion and other nice features.
- Major refactoring. Changed a lot of code.

Version 0.11 (26.01.2017)

- Refactored all commands to use argparse command line options.
- Added new options.

Version 0.10 (07.09.2016)

- Refactoring.
- Added random user name generator.
- Added 'last' to history-command to execute last command.
- Added uname-command to generate random usernames.
- Uses /dev/clipboard (if available, otherwise uses pyperclip)
  to copy strings to clipboard.
- Added version info to info-command.
- Added N=number to username format.

Version 0.9 (14.01.2016)

- Pip distribution.

Version 0.7 (12.10.2015)

- Copy generated password to clipboard when using pwd or pwgen
  commands.
- Added config item to enable/disable copying to clipboard.

Version 0.6 (07.10.2015)

- Removed migrate functionality.
- Added encrypt & decrypt commands.
- Renamed modify-command to edit-command.
- Minor refactoring.

Version 0.5 (12.09.2015)

- Bug fix: password generator did not work when adding account.

Version 0.4 (07.09.2015)

- Moved to Python3.
- Changed license to the MIT License.
- Changed name to clipwdmgr.py.
- Major refactoring.
- Added new functionality.

Version 0.3 (24.06.2015)

- Added version number and .txt extension to password file. 
- Naming: clipasswordmgr.py is the development version. 