@@ -52,8 +52,11 @@ COLUMN_URL="URL"
 COLUMN_EMAIL="EMAIL"
 COLUMN_PASSWORD="PASSWORD"
 COLUMN_COMMENT="COMMENT"
-DATABASE_ACCOUNTS_TABLE_COLUMNS=[COLUMN_CREATED,COLUMN_UPDATED,COLUMN_NAME,COLUMN_URL,COLUMN_USERNAME,COLUMN_EMAIL,COLUMN_PASSWORD,COLUMN_COMMENT]
+COLUMN_ID="ID"
+
+DATABASE_ACCOUNTS_TABLE_COLUMNS=[COLUMN_CREATED,COLUMN_UPDATED,COLUMN_NAME,COLUMN_URL,COLUMN_USERNAME,COLUMN_EMAIL,COLUMN_PASSWORD,COLUMN_COMMENT,COLUMN_ID]
 DATABASE_ACCOUNTS_TABLE_COLUMN_IS_TIMESTAMP=[COLUMN_CREATED,COLUMN_UPDATED]
+DATABASE_ACCOUNTS_TABLE_COLUMN_IS_INTEGER=[COLUMN_ID]
 
 
 CLIPWDMGR_ACCOUNTS_FILE_NAME="clipwdmgr_accounts.txt"
@@ -67,7 +70,7 @@ CLIPWDMGR_DATA_DIR="CLIPWDMGR_DATA_DIR"
 CLIPWDMGR_SETTINGS_FILE_NAME="clipwdmgr_settings.json"
 
 #this is to display account info
-COLUMNS_TO_SELECT_ORDERED_FOR_DISPLAY=[COLUMN_NAME,COLUMN_URL,COLUMN_CREATED,COLUMN_UPDATED,COLUMN_USERNAME,COLUMN_EMAIL,COLUMN_PASSWORD,COLUMN_COMMENT]
+COLUMNS_TO_SELECT_ORDERED_FOR_DISPLAY=[COLUMN_NAME,COLUMN_ID,COLUMN_URL,COLUMN_CREATED,COLUMN_UPDATED,COLUMN_USERNAME,COLUMN_EMAIL,COLUMN_PASSWORD,COLUMN_COMMENT]
 
 #Settings key names
 
@@ -78,6 +81,7 @@ SETTING_MASK_PASSWORD_ON_VIEW="mask_password_on_view"
 SETTING_COPY_PASSWORD_ON_VIEW="copy_password_to_clipboard"
 SETTING_MAX_PASSWORD_FILE_BACKUPS="max_password_file_backups"
 SETTING_ENABLE_CLIPBOARD_COPY="enable_clipboard_copy"
+SETTING_MAX_ID="maximum_id"
 #settings default values, if setting file does not exist
 #these are saved to settings file
 SETTING_DEFAULT_VALUES={
@@ -87,7 +91,8 @@ SETTING_DEFAULT_VALUES={
     SETTING_MASK_PASSWORD_ON_VIEW:False,
     SETTING_COPY_PASSWORD_ON_VIEW:True,
     SETTING_ENABLE_CLIPBOARD_COPY:True,
-    SETTING_MAX_PASSWORD_FILE_BACKUPS:10
+    SETTING_MAX_PASSWORD_FILE_BACKUPS:10,
+    SETTING_MAX_ID:9999
 }
 
 
